--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "apexcharts": "^3.10.1",
+    "core-js": "^3.4.7",
+    "html2pdf.js": "^0.9.2",
+    "mutationobserver-shim": "^0.3.7",
+    "vue": "^2.6.10",
+    "vue-apexcharts": "^1.5.1",
+    "vue-html2pdf": "^1.8.0",
+    "vue-html2pdf-test": "^1.8.0",
+    "vuex": "^3.1.2",
+    "vuex-map-fields": "^1.3.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
     "> 1%",
